--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using GestionDePropiedades
-@namespace GestionDePropiedades.Pages
+@namespace GestionDePropiedades.Views
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
